tests/baselines/reference/jsxNamespacePrefixInName.errors.txt
jsxNamespacePrefixInName.tsx(7,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(8,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(8,45): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(8,50): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(8,51): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(9,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(9,60): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(9,65): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(9,66): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(10,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(10,53): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(10,58): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(10,59): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(11,32): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(11,68): error TS1005: '>' expected.
jsxNamespacePrefixInName.tsx(11,73): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(11,74): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(21,27): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(21,29): error TS1005: '...' expected.
jsxNamespacePrefixInName.tsx(21,29): error TS2698: Spread types may only be created from object types.
jsxNamespacePrefixInName.tsx(22,27): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(24,21): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(24,22): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(24,25): error TS1005: ',' expected.
jsxNamespacePrefixInName.tsx(24,30): error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
jsxNamespacePrefixInName.tsx(24,38): error TS1005: ':' expected.
jsxNamespacePrefixInName.tsx(24,41): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(24,42): error TS1109: Expression expected.
jsxNamespacePrefixInName.tsx(25,29): error TS1003: Identifier expected.
jsxNamespacePrefixInName.tsx(25,31): error TS1005: '...' expected.
jsxNamespacePrefixInName.tsx(25,31): error TS2698: Spread types may only be created from object types.


==== jsxNamespacePrefixInName.tsx (31 errors) ====
    var justElement1 = <a:element />;
    var justElement2 = <a:element></a:element>;
    var justElement3 = <a:element attr={"value"}></a:element>;
    var justElement4 = <a:element>{"text"}</a:element>;
    var justElement5 = <a:element attr={"value"}>{"text"}</a:element>;
    
    var tooManySeparators1 = <a:ele:ment />;
                                   ~
!!! error TS1003: Identifier expected.
    var tooManySeparators2 = <a:ele:ment></a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                ~
!!! error TS1005: '>' expected.
                                                     ~
!!! error TS1005: ',' expected.
                                                      ~
!!! error TS1109: Expression expected.
    var tooManySeparators3 = <a:ele:ment attr={"value"}></a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                               ~
!!! error TS1005: '>' expected.
                                                                    ~
!!! error TS1005: ',' expected.
                                                                     ~
!!! error TS1109: Expression expected.
    var tooManySeparators4 = <a:ele:ment>{"text"}</a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                        ~
!!! error TS1005: '>' expected.
                                                             ~
!!! error TS1005: ',' expected.
                                                              ~
!!! error TS1109: Expression expected.
    var tooManySeparators5 = <a:ele:ment attr={"value"}>{"text"}</a:ele:ment>;
                                   ~
!!! error TS1003: Identifier expected.
                                                                       ~
!!! error TS1005: '>' expected.
                                                                            ~
!!! error TS1005: ',' expected.
                                                                             ~
!!! error TS1109: Expression expected.
    
    var justAttribute1 = <element a:attr={"value"} />;
    var justAttribute2 = <element a:attr={"value"}></element>;
    var justAttribute3 = <element a:attr={"value"}>{"text"}</element>;
    
    var both1 = <a:element a:attr={"value"} />;
    var both2 = <a:element k:attr={"value"}></a:element>;
    var both3 = <a:element a:attr={"value"}>{"text"}</a:element>;
    
    var endOfIdent1 = <a: attr={"value"} />;
                              ~
!!! error TS1003: Identifier expected.
                                ~~~~~~~
!!! error TS1005: '...' expected.
                                ~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    var endOfIdent2 = <a attr:={"value"} />;
                              ~
!!! error TS1003: Identifier expected.
    
    var beginOfIdent1 = <:a attr={"value"} />;
                        ~
!!! error TS1109: Expression expected.
                         ~
!!! error TS1109: Expression expected.
                            ~~~~
!!! error TS1005: ',' expected.
                                 ~~~~~~~~~
!!! error TS2362: The left-hand side of an arithmetic operation must be of type 'any', 'number', 'bigint' or an enum type.
                                         ~
!!! error TS1005: ':' expected.
                                            ~
!!! error TS1109: Expression expected.
                                             ~
!!! error TS1109: Expression expected.
    var beginOfIdent2 = <a :attr={"value"} />;
                                ~
!!! error TS1003: Identifier expected.
                                  ~~~~~~~
!!! error TS1005: '...' expected.
                                  ~~~~~~~
!!! error TS2698: Spread types may only be created from object types.
    
    var upcaseComponent1 = <ns:Upcase />;  // Parsed as intrinsic
    var upcaseComponent2 = <Upcase:element />;  // Parsed as instrinsic
    